--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,54 +27,54 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   built_collection: 5.1.1
-  built_value: 8.4.3
-  cached_network_image: 3.2.1
-  cloud_firestore: 4.2.0
-  cloud_firestore_platform_interface: 5.9.1
-  cloud_firestore_web: 3.1.1
-  data_table_2: 2.3.12
-  dropdown_button2: 2.0.0
-  easy_debounce: 2.0.1
-  firebase_auth: 4.2.0
-  firebase_auth_platform_interface: 6.11.4
-  firebase_auth_web: 5.2.0
-  firebase_core: 2.4.0
-  firebase_core_platform_interface: 4.5.2
-  firebase_core_web: 2.0.2
+  built_value: ^8.6.1
+  cached_network_image: ^3.2.3
+  cloud_firestore: ^4.8.0
+  cloud_firestore_platform_interface: ^5.15.0
+  cloud_firestore_web: ^3.6.0
+  data_table_2: ^2.5.1
+  dropdown_button2: ^2.1.3
+  easy_debounce: ^2.0.3
+  firebase_auth: ^4.6.2
+  firebase_auth_platform_interface: ^6.15.2
+  firebase_auth_web: ^5.5.2
+  firebase_core: ^2.13.1
+  firebase_core_platform_interface: ^4.8.0
+  firebase_core_web: ^2.5.0
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
-  flutter_spinkit: 5.1.0
-  font_awesome_flutter: 10.1.0
+  flutter_spinkit: ^5.2.0
+  font_awesome_flutter: ^10.4.0
   from_css_color: 2.0.0
-  google_fonts: 4.0.3
-  google_sign_in: 6.0.2
-  google_sign_in_android: 6.1.8
-  google_sign_in_ios: 5.6.1
-  google_sign_in_platform_interface: 2.4.0
-  google_sign_in_web: 0.11.0+2
-  intl: 0.17.0
-  json_path: 0.4.1
-  json_serializable: 6.6.1
-  page_transition: 2.0.4
-  path_provider: 2.0.14
-  path_provider_android: 2.0.25
-  path_provider_foundation: 2.2.2
+  google_fonts: ^4.0.4
+  google_sign_in: ^6.1.3
+  google_sign_in_android: ^6.1.15
+  google_sign_in_ios: ^5.6.2
+  google_sign_in_platform_interface: ^2.4.1
+  google_sign_in_web: ^0.12.0+1
+  intl: ^0.18.0
+  json_path: ^0.6.0
+  json_serializable: ^6.7.0
+  page_transition: ^2.0.9
+  path_provider: ^2.0.15
+  path_provider_android: ^2.0.27
+  path_provider_foundation: ^2.2.3
   path_provider_platform_interface: 2.0.6
-  plugin_platform_interface: 2.1.3
-  provider: 6.0.4
+  plugin_platform_interface: ^2.1.4
+  provider: ^6.0.5
   rxdart: 0.27.7
-  shared_preferences: 2.0.15
-  shared_preferences_android: 2.1.0
+  shared_preferences: ^2.1.1
+  shared_preferences_android: ^2.1.4
   shared_preferences_ios: 2.1.1
   shared_preferences_platform_interface: 2.2.0
   shared_preferences_web: 2.1.0
   sign_in_with_apple: 4.3.0
   sign_in_with_apple_platform_interface: 1.0.0
   sign_in_with_apple_web: 1.0.1
-  sqflite: 2.2.6
-  timeago: 3.2.2
-  url_launcher: 6.1.10
-  url_launcher_android: 6.0.27
+  sqflite: ^2.2.8+4
+  timeago: ^3.4.0
+  url_launcher: ^6.1.11
+  url_launcher_android: ^6.0.35
   url_launcher_ios: 6.1.4
   url_launcher_platform_interface: 2.1.2
 
@@ -84,10 +84,10 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  analyzer: 5.10.0
-  build_runner: 2.3.3
-  built_value_generator: 8.4.3
-  flutter_launcher_icons: 0.12.0
+  analyzer: ^5.13.0
+  build_runner: ^2.4.4
+  built_value_generator: ^8.6.1
+  flutter_launcher_icons: ^0.13.1
 
   flutter_test:
     sdk: flutter
